--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="cancle">Cancle</string>
     <string name="ok">OK</string>
     <string name="channel_name">hihi</string>
+    <string name="later_exit"><![CDATA[Later & exit]]></string>
 </resources>
